[gd_scene load_steps=7 format=3 uid="uid://b3wuam0kth61g"]

[ext_resource type="Script" path="res://Scripts/Door.gd" id="1_lor8j"]
[ext_resource type="Texture2D" uid="uid://c5uvjnwi5xriy" path="res://Art/door.png" id="2_ra5k7"]
[ext_resource type="Texture2D" uid="uid://pr6k62aa4j0r" path="res://Sprites/letterE.png" id="3_qgk42"]
[ext_resource type="Script" path="res://Scripts/Dialogue/DialogHandlerDoor01.gd" id="4_55bin"]
[ext_resource type="Script" path="res://Scripts/Dialogue/DialogTextDoor01.gd" id="5_3m13t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2jof"]
size = Vector2(188, 226)

[node name="Door" type="Area2D"]
script = ExtResource("1_lor8j")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_ra5k7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 11)
shape = SubResource("RectangleShape2D_i2jof")

[node name="LetterE" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(-2, -138)
scale = Vector2(0.168966, 0.229328)
texture = ExtResource("3_qgk42")

[node name="DialogHandler" type="Node" parent="."]
script = ExtResource("4_55bin")

[node name="DialogText" type="Node" parent="DialogHandler"]
script = ExtResource("5_3m13t")

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
